created html pages and styling it

--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,1 +1,14 @@
-<p>landingpage works!</p>
+<!-- <p>landingpage works!</p> -->
+
+<div class="container">
+  <div class="content">
+    <p class="brand">re<span>Q</span></p>
+    <h2>Real Estate Investment That Matters To You</h2>
+
+    <p>Limited to the San Francisco Bay Area - Join our BETA!</p>
+    <ul>
+      <li><a href="login">SIGN UP WITH LINKEDIN</a></li>
+      <li><a href="" id="disableClick">SIGN UP</a></li>
+    </ul>
+  </div>
+</div>
