--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,5 @@
-<p>page-not-found works!</p>
+<!-- <p>page-not-found works!</p> -->
+
+<div class="container">
+    <p>404 PAGE NOT FOUND</p>
+</div>
