add in-app navigation with routing

--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -7,8 +7,8 @@
 
     <p>Limited to the San Francisco Bay Area - Join our BETA!</p>
     <ul>
-      <li><a href="login">SIGN UP WITH LINKEDIN</a></li>
-      <li><a href="" id="disableClick">SIGN UP</a></li>
+      <li><a routerLink="/login">SIGN UP WITH LINKEDIN</a></li>
+      <li><a routerLink="" id="disableClick">SIGN UP</a></li>
     </ul>
   </div>
 </div>
