--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,5 +1,3 @@
-
-
 <!-- <p>login-page works!</p> -->
 <div class="container">
   <div class="content">
@@ -9,35 +7,52 @@
       when you are approved for our BETA.
     </p>
     <div class="forms">
-      <form>
+      <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
         <div class="group">
-          <label class="formLabels">NAME</label>
-          <input
-            type="text"
-            name="name"
-            class="group-input"
-            readonly
-            formControlName="name"
+          <label class="formLabels" for="">NAME</label>
+          <input type="text" name="name" class="group-input" readonly formControlName="name"
           />
         </div>
 
         <div class="group">
-          <label class="formLabels">EMAIL ADDRESS</label>
-          <input
-            type="email"
-            name="email"
-            class="group-input"
-            readonly
-            formControlName="email"
+          <label class="formLabels" for="">EMAIL ADDRESS</label>
+          <input type="email" name="email" class="group-input" readonly  formControlName="email"
           />
         </div>
 
         <div class="group">
           <label class="formLabels">PHONE NUMBER</label>
-          <input type="tel" class="group-input" name="phone" />
+          <input
+            type="tel"
+            class="group-input"
+            name="phone"
+            formControlName="phone"
+          />
+ 
+          <div
+            *ngIf="
+              signUpForm.controls.phone.invalid &&
+              signUpForm.controls.phone.errors.required &&
+              (signUpForm.controls.phone.dirty ||
+                signUpForm.controls.phone.touched)
+            "
+          >
+            Phone is required.
+          </div>
+          <div
+            *ngIf="
+              signUpForm.controls.phone.invalid &&
+              signUpForm.controls.phone.errors.pattern &&
+              (signUpForm.controls.phone.dirty ||
+                signUpForm.controls.phone.touched)
+            "
+          >
+            Invalid phone number.
+          </div>
         </div>
         <div class="border-wrapper"></div>
-        <button type="submit">SIGN UP</button>
+        <button type="submit"  [disabled]="!signUpForm.valid" >SIGN UP</button> 
+        <!-- //sign uo button will not work until the inputs are validated -->
       </form>
     </div>
   </div>
