retreiving data on thankyou page via console

--- a/src/app/thankyou/thankyou.component.html
+++ b/src/app/thankyou/thankyou.component.html
@@ -1,6 +1,6 @@
 <!-- <p>thankyou works!</p> -->
 <div class="container">
-  <p>re<span>Q</span></p>
+  <p class="brand">re<span>Q</span></p>
   <p>Thank You!</p>
   <p>We'll back to you soon.</p>
   <p>Please check your mail.</p>
