--- a/src/app/thankyou/thankyou.component.scss
+++ b/src/app/thankyou/thankyou.component.scss
@@ -1,7 +1,8 @@
 .container {
     flex-direction: column;
-    p {
-      font-size: 30px;
+    .brand {
+      font-size: 36px;
+      font-weight: bold;
       margin: 20px 0;
     }
     span {
