some css changes

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -27,6 +27,7 @@
             class="group-input"
             name="phone"
             formControlName="phone"
+            placeholder="Type a phone number"
           />
  
           <div
